# synthesizAR

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  .sunpy-template.yml  .travis.yml  MANIFEST.in  README.md  conda_environment.yml  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  rtd_environment.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  run-tests.yml
docs/: Makefile  conf.py  develop.rst  examples.rst  getting_started.rst  index.rst  install.rst  references.bib  tutorial.rst
docs/code_ref/: index.rst  synthesizar.rst  synthesizar_analysis.rst  synthesizar_atomic.rst  synthesizar_extrapolate.rst  synthesizar_instruments.rst  synthesizar_interfaces.rst  synthesizar_maps.rst  synthesizar_model_ext.rst  synthesizar_models.rst  synthesizar_physics.rst  synthesizar_util.rst  synthesizar_visualize.rst
docs/source/: conf.py  develop.rst  getting_started.rst  install.rst
docs/source/code_ref/: synthesizar_instruments.rst  synthesizar_util.rst
examples/: arcade-rtv.py  ebtel-nanoflares.py  ebtel_hydro_sims_example.ipynb  loop-bundle-rtv.py  magnetic_skeleton_example.ipynb  multi-instrument.py
synthesizAR/: __init__.py  _astropy_init.py  conftest.py  field.py  loop.py  observe.py  skeleton.py  strand.py  util.py
synthesizAR/analysis/: __init__.py  aia.py  dem.py  eis.py  maps.py  timelags.py
synthesizAR/analysis/time_lag/: __init__.py  map_sources.py  time_lag.py
synthesizAR/atomic/: __init__.py  chianti.py  emiss_models.py  emission_models.py  idl.py  nei.py  population_fractions.py
synthesizAR/emiss_models/: __init__.py
synthesizAR/extrapolate/: __init__.py  extrapolators.py  fieldlines.py  helpers.py
synthesizAR/extrapolate/tests/: test_helpers.py
synthesizAR/instruments/: __init__.py  base.py  hinode.py  physical.py  sdo.py  util.py
synthesizAR/instruments/data/: aia_temperature_response.asdf  hinode_eis.json  hinode_xrt.json  sdo_aia.json
synthesizAR/instruments/tests/: test_physical.py  test_sdo.py
synthesizAR/interfaces/: __init__.py  ebtel.py  heating_models.py  hydrad.py  isothermal.py  martens.py  rtv.py
synthesizAR/interfaces/ebtel/: __init__.py  ebtel.py  heating_models.py  nei.py  util.py
synthesizAR/interfaces/hydrad/: __init__.py  helpers.py  hydrad.py
synthesizAR/interfaces/tests/: __init__.py  test_ebtel.py
synthesizAR/maps/: __init__.py  cube.py  maps.py
synthesizAR/model_ext/: __init__.py  ebtel.py  heating_models.py
synthesizAR/models/: __init__.py  cooling.py  dem.py  geometry.py  heating.py  magnetic.py  scaling_laws.py
synthesizAR/physics/: __init__.py  scaling_laws.py
synthesizAR/tests/: coveragerc  test_field.py  test_loop.py
synthesizAR/util/: __init__.py  cube.py  decorators.py  logger.py  util.py  xml_io.py
synthesizAR/visualize/: __init__.py  aia.py  colormaps.py  fieldlines.py
