[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_docs]
upload-dir = docs/build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = synthesizAR
description = Package for synthesizing AR emission
long_description = Python package for forward modeling emission from solar active regions using hydrodynamic simulations of coronal loops
author = Will Barnes
author_email = will.t.barnes@gmail.com
license = GPLv3
url = http://synthesizar.readthedocs.io
edit_on_github = True
github_project = wtbarnes/synthesizAR
